--- a/src/main/resources/templates/offers/application.html
+++ b/src/main/resources/templates/offers/application.html
@@ -7,9 +7,8 @@
 </head>
 
 <body class="application-screen">
-    <header>
-        <div th:replace="~{/fragments/header}"></div>
-    </header>
+    
+         <header  th:replace="~{/fragments/header}">    </header> <main>
     
     <div class="application-container">
         <h1>Formulário de Candidatura</h1>
@@ -33,5 +32,6 @@
 
     <div th:replace="~{/fragments/scripts}">
     </div>
-</body>
+</main> </main> </body>
+
 </html>
