--- a/src/main/resources/templates/offers/list.html
+++ b/src/main/resources/templates/offers/list.html
@@ -3,73 +3,75 @@
 
 <head>
 
-    <meta th:insert="~{/fragments/headfiles(title='Oportunidades')}">
+    <meta th:insert="~{/fragments/custom-headfiles :: list-headfiles(title='Oportunidades')}">
 
-    <link rel="stylesheet" th:href="@{/styles/list.css}">
 </head>
 
 <body>
-    <header>
-        <div th:replace="~{/fragments/header}">
-        </div>
-    </header>
-    <div class="main-screen">
-        <div class="card-component">
-            <h1> Todas as Ofertas de Estágio Cadastradas</h1>
+    <header th:replace="~{/fragments/header}"> </header>
+    <main>
 
-            <a th:href="@{/internshipOffer/register}">
-                <button class="button-add">
-                    Nova Oferta
-                </button>
-            </a>
+        <div class="main-screen">
+            <div class="card-component">
+                <h1> Todas as Ofertas de Estágio Cadastradas</h1>
 
-            <table>
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Principal Atividade</th>
-                        <th>Carga Horária Semanal</th>
-                        <th>Valor da Bolsa</th>
-                        <th>Vale Transporte</th>
-                        <th>Pré-requisitos</th>
-                        <th>Ações</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr th:each="offer : ${offers}">
-                        <td>
-    
-                            [[${offer.id}]]
-                        </td>
+                <a th:href="@{/internshipOffer/register}">
+                    <button class="button-add">
+                        Nova Oferta
+                    </button>
+                </a>
+
+                <table>
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Contratante</th>
+                            <th>Principal Atividade</th>
+                            <th>Cari2.toString Horária Semanal</th>
+                            <th>Valor da Bolsa</th>
+                            <th>Vale Transporte</th>
+                            <th>Pré-requisitos</th>
+                            <th>Ações</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="offer : ${offers}">
+                            <td>
+                                [[${offer.id}]]
+                            </td>
+                            <td th:text="${offer.companyResponsable.fantasyName}"></td>
                             <td th:text="${offer.principalActivity}"></td>
                             <td th:text="${offer.weeklyWorkload}"></td>
                             <td th:text="${offer.remunerationValue}"></td>
                             <td th:text="${offer.transportVoucher}"></td>
                             <td th:text="${offer.prerequisites}"></td>
-                        <td>
-                            <div class="action-box">
-                                <form th:action="@{delete/{id}(id=${offer.id})}" method="post">
-                                    <input type="hidden" name="_method" value="DELETE" />
-                                    <input class="input-delete" type="submit" value="Remover" />
-                                </form>
-                                <form th:action="@{apply/{id}(id=${offer.id})}" method="get">
-                                    <input class="btn-action btn-apply" type="submit" value="Candidatar-se" />
-                                </form>
-                                <a th:href="@{info/{id}(id=${offer.id})}">
-                                Visualizar
-                                </a>
-                            </div>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+                            <td>
+                                <div class="action-box">
+                                    <form th:action="@{delete/{id}(id=${offer.id})}" method="post">
+                                        <input type="hidden" name="_method" value="DELETE" />
+                                        <input class="input-delete" type="submit" value="Remover" />
+                                    </form>
+                                    <form th:action="@{apply/{id}(id=${offer.id})}" method="get">
+                                        <input class="btn-action btn-apply" type="submit" value="Candidatar-se" />
+                                    </form>
+                                    <a th:href="@{info/{id}(id=${offer.id})}">
+                                        Visualizar
+                                    </a>
+                                </div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
 
+            </div>
         </div>
-    </div>
 
-    
-    <div th:replace="~{/fragments/scripts}">
-    </div>
-</body>
+
+        <div th:replace="~{/fragments/scripts}">
+        </div>
+    </main>
+
+    <body>
+
 
 </html>
