--- a/src/main/resources/templates/pages/choice-register.html
+++ b/src/main/resources/templates/pages/choice-register.html
@@ -13,5 +13,6 @@
         <button type="button" th:onclick="|window.location.href='@{/company/register}'|">Registrar como Empresa</button>
         <button type="button" th:onclick="|window.location.href='@{/student/register}'|">Registrar como Estudante</button>
     </div>
-</body>
+</main> </main> </body>
+
 </html>
