--- a/src/main/resources/templates/system/not-found.html
+++ b/src/main/resources/templates/system/not-found.html
@@ -6,9 +6,8 @@
 </head>
 <body>
     
-<header>
-    <div th:replace="~{/fragments/header}"></div>
-</header>
+
+     <header  th:replace="~{/fragments/header}"></header> <main>
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -30,5 +29,6 @@
     </div>
     <div th:replace="~{/fragments/scripts}">
 
-</body>
+</main> </main> </body>
+
 </html>
