--- a/src/main/resources/templates/offers/form.html
+++ b/src/main/resources/templates/offers/form.html
@@ -43,7 +43,7 @@
 
             <div class="form-group">
                 <label for="company">Empresa:</label>
-                <select id="company" th:field="*{companyResponsable}" required>
+                <select id="company" th:field="*{companyResponsible}" required>
                     <option value="">Selecione uma empresa</option>
                     <option th:each="company : ${companies}" th:value="${company.id}" th:text="${company.fantasyName}"></option>
                 </select>
