--- a/src/main/resources/static/styles/fragments/footer.css
+++ b/src/main/resources/static/styles/fragments/footer.css
@@ -6,9 +6,10 @@
     text-align: center;
 }
 
-a {
+footer a {
     display: inline-block;
-    margin-bottom: 0.5rem;
+     margin-bottom: 0.5rem;
+ 
 }
 
 .text-muted {
