--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -1,3 +1,5 @@
+@import url("./theme.css");
+
 * {
     margin: 0;
     padding: 0;
@@ -5,16 +7,19 @@
     cursor: default;
 }
 
-/* Body */
+/* Estilo base para o corpo da página */
 body {
-    font-family: var(--font-family);
-    font-size: 16px;
-    background: var(--body-color-default);
-
-}
+    font-family: var(--info-font-family);
+    background-color: var(--info-background);
+    cursor: default;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
 
 a {
-    text-decoration: none;
+    cursor: pointer;
+    text-decoration: none !important;
     color: var(--links-color);
     transition: ease-in all 0.5s;
 }
@@ -42,4 +47,11 @@ div.logo {
 
 .navbar-brand:hover {
     cursor: pointer;
+}
+
+.no-content-msg{
+    font-weight:bolder;
+    width: 100%;
+    text-align: center;
+    color: var(--primary-color-dark);
 }
