--- a/src/main/resources/static/styles/perfil.css
+++ b/src/main/resources/static/styles/perfil.css
@@ -1,23 +1,7 @@
-/* Variáveis de estilo para manter consistência */
-:root {
-  --info-background: #f5f5f5;
-  --info-font-family: 'Arial', sans-serif;
-  --info-section-border: 1px solid #ddd;
-  --opportunity-card-background: #ffffff;
-  --opportunity-card-background-hover: #e6f7ff;
-  --opportunity-card-color-hover: #007bff;
-}
 
-/* Estilo base para o corpo da página */
-body {
-  font-family: var(--info-font-family);
-  background-color: var(--info-background);
-  cursor: default;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
+/* body{
+  background: var(--info-background);
+} */
 /* Estilo para as seções de informação */
 .info-section {
   padding: 1.5rem;
@@ -33,7 +17,6 @@ body {
   display: flex;
   align-items: center;
   padding: 1rem;
-  background-color: var(--info-background);
 }
 
 #first-info img {
@@ -101,6 +84,15 @@ body {
   text-align: center;
   color: #333;
 }
+
+.section {
+  margin-bottom: 30px;
+  padding: 15px;
+  border: 1px solid #e0e4e8; /* Bordas suaves */
+  border-radius: 5px;
+  animation: slideUp 0.5s ease-out;
+}
+
 
 /* Estilo para cartões de oportunidade */
 #oportunity-section .opportunity-item {
